# metaphorist

./: .gitignore  CLAUDE.md  Makefile  README.md  build_curated.py  frame-families.yaml  frames.yaml  index.html  metaphor-families.yaml  metaphors.yaml  pnpm-lock.yaml  pyproject.toml  vite-plugin-curation.ts  vite-plugin-dataset.ts  vite-plugin-sitemap.ts  vite.config.ts
.claude/: settings.json
.claude/workflows/: mml-batch.js
.githooks/: pre-commit
curation/: favorites.json  ratings.json
dataset/: frame-families.yaml  frames.yaml  metaphor-families.yaml  metaphors.yaml
docs/: mapping-backfill-spec.md  metaphor-drafting-spec.md
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  vite-plugin-curation.ts  vite-plugin-dataset.ts  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
public/: robots.txt
scripts/: dataset_lib.py
scripts/mapping_gaps/: context_pack.py  find_gaps.py  merge_batch.py  validate_batch.py
scripts/mml/: context_pack.py  coverage_report.py  frame_candidates.py  make_batches.py  merge_batch.py  validate_batch.py
src/: App.tsx  index.css  types.ts  vite-env.d.ts
src/data/: index.ts
src/lib/: curation.ts  format.ts  seo.ts  useDocumentHead.ts  useMediaQuery.ts
src/pages/: AboutPage.tsx  CuratePage.tsx  FrameListPage.tsx  (+3 more)
tests/: conftest.py  test_aliases.py  test_collection_sizes.py  test_completeness.py  test_formats.py  test_references.py  test_uniqueness.py
validation/: pyproject.toml
validation/tests/: conftest.py  dataset_lib.py  test_completeness.py  test_formats.py  test_references.py
(+42 files in other folders)
